fixed visual bug from z-index

--- a/src/scss/config/media.scss
+++ b/src/scss/config/media.scss
@@ -6,7 +6,7 @@
     margin: .5rem;
 }
 .slide__image {
-  z-index: 100;
+  z-index: 1;
   width: 60vw;
   height: 50vh;
   max-width: 600px;
